--- a/css/style.css
+++ b/css/style.css
@@ -5,4 +5,14 @@
 .debug .my_row_banner {
     height: 400px;
 }
+.debug .my_row_portfolio {
+    height: 500px;
+}
+.debug .my_row_about {
+    height: 300px;
+}
+.debug .my_row_contact {
+    height: 300px;
+}
+
 /* fine debug */
