--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
     height: 400px;
 }
 .debug .my_row_portfolio {
-    height: 500px;
+    /* height: 100px; */
 }
 .debug .my_row_about {
     height: 300px;
