--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
     height: 100%;
 }
 .debug .my_row_address {
-    height: 100px;
+    height: 100%;
 }
 .debug .my_row_credit {
     height: 50px;
