--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,37 @@
+/* common */
+body {
+    color: white;
+}
+.gray {
+    background-color: rgb(41, 62, 81);
+}
+.green {
+    background-color: rgb(0, 197, 158);
+}
+.avio {
+    background-color: rgb(54, 83, 110);
+}
+.white {
+    color: white;
+}
+/* /common */
+/* sezione menu  */
+.my_nav-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 50vh;
+    z-index: 999;
+}
+/* / sezione menu */
+
+
+
+
+
+
+
 /* inizio debug */
 .debug .my_row_menu {
     height: 50px;
