--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,41 @@ body {
 .my_contact {
     color: black;
 }
+.my_input {
+    border: none;
+}
+.my_btn-contact {
+    background-color: rgb(0, 197, 158);
+    color: white;
+}
+.my_col_container {
+    padding: 0;
+}
+
 /* fine sezione contact  */
+/* sezione footer  */
+.my_container_address {
+    padding: 0;
+}
+.circol {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    border: 1px solid white;
+    border-radius: 50%;
+    margin: 3px;
+}
+.circol i {
+    text-align: center;
+    line-height: 40px;
+}
+#my_color_green {
+    color: rgb(0, 197, 158);
+}
+.my_credit p {
+    font-size: 12px;
+}
+/* fine sezione footer  */
 
 
 
